# bronzeville_dxf_parse

./: Cargo.toml  circle.dxf  square.dxf  triangle.dxf  triangle_test_macro.dxf
src/: main.rs
src/geometry/: points.rs
