[package]
name = "dxf-model"
version = "0.1.0"
edition = "2021"
authors = ["BradenEverson"]
description = "Extension macros for the dxf crate for creating points and drawings based on a sequence of points"
license="MIT"
categories=["Computer vision"]
keywords = [
    "cad",
    "dxf",
    "autocad",
    "dxb"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxf = "0.5.0"
